tdf#171337: improve prefix generation to guarantee uniqueness

Commit b3bfae88b66acf4e0ecbf3464362834f5ce3ac1e (separate ImpSdrPdfImport's
by prefix, 2025-10-17) introduced a prefix to font filenames, apparently
to avoid same filenames in different imports. It used ImpSdrPdfImport's
pointer for that. However, it may happen that the next time it imports, the
new instance of ImpSdrPdfImport may get allocated at exactly same address.
Then afdko's cbConvert may abort because of failed fileopen.

This adds a static counter to the prefix string. I decided to keep also
the pointer, to avoid a hypothetical clash in case of a font name statring
with a short number like 0 or 1. In theory, we should use methods that
create unique temporary names instead.

Change-Id: Ia52b45002d3fe9e008bed33bc90cec190929e519
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/201785
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit dc4f4b85c50a2d24c5e2417854f54934bc4136da)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/201892
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>